--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,12 +1459,39 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
-        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
+        "outputId": "93e372d6-9d91-42d0-fd9c-b11c7f275757"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "https://brickset.com/sets/year-2019\n",
+            "https://brickset.com/sets/year-2019/page-2\n",
+            "https://brickset.com/sets/year-2019/page-3\n",
+            "https://brickset.com/sets/year-2019/page-4\n",
+            "https://brickset.com/sets/year-2019/page-5\n",
+            "https://brickset.com/sets/year-2019/page-6\n",
+            "https://brickset.com/sets/year-2019/page-7\n",
+            "https://brickset.com/sets/year-2019/page-8\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-2-623f5b574fb1>:68: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n"
+          ]
+        }
+      ],
       "source": [
         "#si-exercise\n",
         "import requests\n",
@@ -1476,6 +1503,9 @@
         "\n",
         "# A function to collect lego sets from search results on brickset.com\n",
         "def collectLegoSets(startURL):\n",
+        "    time.sleep(4 + np.random.rand()*3)\n",
+        "    print(startURL)\n",
+        "\n",
         "    # Add headers to imitate a real browser\n",
         "    headers = {\n",
         "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36',\n",
@@ -1501,24 +1531,22 @@
         "        row.append(i.h1.text)\n",
         "        try:\n",
         "            # Extract price and translate to a floating point number from string, append to row IF PRICE EXISTS\n",
-        "            row.append(re.search(r'\\u20AC\\s*(\\d+.\\d+)', i.find('dt', string=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[0])\n",
-        "        except:\n",
-        "            # Missing value for sets with no price, append to row IF NO PRICE EXISTS\n",
-        "            row.append('')\n",
-        "\n",
-        "        try:\n",
-        "            # Extract price and translate to a floating point number from string, append to row IF PRICE EXISTS\n",
-        "            row.append(i.find('dt', string=\"Pieces\").find_next_sibling('dd').find('a').text)\n",
+        "           price_s = i.find('dt', string = 'RRP' ).find_next_sibling().text\n",
+        "           price = float(re.search(r'(\\u20AC)(\\d+[.]\\d{2})', price_s).groups()[1]) #adding the one at the end made it so that when we print out the expression it will only give us the numeric part (so the price) and not the euro symbol\n",
+        "           row.append(price) #adds the found price to the row\n",
         "        except:\n",
         "            row.append(np.nan)\n",
-        "\n",
         "        try:\n",
-        "            row.append(i.find('dt', string=\"Minifigs\").find_next_sibling('dd').find('a').text)\n",
+        "          row.append(i.find('dt',string ='Pieces').find_next_sibling().text)\n",
         "        except:\n",
-        "            row.append(np.nan)\n",
+        "          row.append(0)\n",
+        "        try:\n",
+        "          row.append(i.find('dt', 'Minifigs').find_next_sibling().text)\n",
+        "        except:\n",
+        "          row.append('')\n",
+        "        # Add the row of data to the dataset\n",
         "        newData.append(row)\n",
-        "\n",
-        "    newData = pd.DataFrame(newData, columns = ['Set', 'Price_Euro','Pieces','Minifigs'])\n",
+        "    newData = pd.DataFrame(newData, columns = ['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
         "\n",
         "    # Check if there are more results on the \"next\" page\n",
         "    try:\n",
@@ -1536,10 +1564,10 @@
         "    # Otherwise return the current data\n",
         "    else:\n",
         "        return newData\n",
+        "    newData.to_csv('lego2019.csv', index = False)\n",
         "\n",
-        "lego2019 = collectLegoSets(\"https://brickset.com/sets/year-2019\")\n",
-        "# Save data to CSV\n",
-        "lego2019.to_csv('lego2019.csv', index=False)"
+        "data = collectLegoSets('https://brickset.com/sets/year-2019');\n",
+        "data.to_csv(\"lego2019.csv\", index = False)\n"
       ]
     }
   ],
