--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1459,14 +1459,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 3,
       "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6bd3015f-1757-469e-a54d-21cd3ee5755a",
-        "outputId": "93e372d6-9d91-42d0-fd9c-b11c7f275757"
+        "outputId": "39c2b3db-d28e-408b-c495-5e53b6d1af31"
       },
       "outputs": [
         {
@@ -1480,94 +1480,113 @@
             "https://brickset.com/sets/year-2019/page-5\n",
             "https://brickset.com/sets/year-2019/page-6\n",
             "https://brickset.com/sets/year-2019/page-7\n",
-            "https://brickset.com/sets/year-2019/page-8\n"
+            "https://brickset.com/sets/year-2019/page-8\n",
+            "https://brickset.com/sets/year-2019/page-9\n",
+            "https://brickset.com/sets/year-2019/page-10\n",
+            "https://brickset.com/sets/year-2019/page-11\n",
+            "https://brickset.com/sets/year-2019/page-12\n",
+            "https://brickset.com/sets/year-2019/page-13\n",
+            "https://brickset.com/sets/year-2019/page-14\n",
+            "https://brickset.com/sets/year-2019/page-15\n",
+            "https://brickset.com/sets/year-2019/page-16\n",
+            "https://brickset.com/sets/year-2019/page-17\n",
+            "https://brickset.com/sets/year-2019/page-18\n",
+            "https://brickset.com/sets/year-2019/page-19\n",
+            "https://brickset.com/sets/year-2019/page-20\n",
+            "https://brickset.com/sets/year-2019/page-21\n",
+            "                            Set  Price_Euro Pieces  Minifigs\n",
+            "0                 Corner Garage      179.99   2569       6.0\n",
+            "1                  Ford Mustang      169.99   1471       NaN\n",
+            "2   NASA Apollo 11 Lunar Lander       99.99   1087       2.0\n",
+            "3             Gingerbread House       89.99   1477       2.0\n",
+            "4       Harley-Davidson Fat Boy       89.99   1023       NaN\n",
+            "..                          ...         ...    ...       ...\n",
+            "20                           Wu         NaN      6       1.0\n",
+            "21              Kai vs. Wyplash         NaN     13       2.0\n",
+            "22              Kai vs. Wyplash         NaN     13       2.0\n",
+            "23                Jay Vs. Lasha         NaN     12       2.0\n",
+            "24                Jay vs. Lasha         NaN     12       2.0\n",
+            "\n",
+            "[500 rows x 4 columns]\n"
           ]
         },
         {
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "<ipython-input-2-623f5b574fb1>:68: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-            "  return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n"
+            "<ipython-input-3-4cf974bb1ad8>:59: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+            "  return pd.concat([data, collectLegoSets(next_page)], axis=0)\n"
           ]
         }
       ],
       "source": [
         "#si-exercise\n",
+        "import pandas as pd\n",
         "import requests\n",
+        "import re\n",
         "from bs4 import BeautifulSoup\n",
         "import numpy as np\n",
-        "import pandas as pd\n",
-        "import re\n",
         "import time\n",
         "\n",
-        "# A function to collect lego sets from search results on brickset.com\n",
-        "def collectLegoSets(startURL):\n",
-        "    time.sleep(4 + np.random.rand()*3)\n",
-        "    print(startURL)\n",
         "\n",
-        "    # Add headers to imitate a real browser\n",
-        "    headers = {\n",
-        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36',\n",
-        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8',\n",
-        "        'Referer': 'https://www.google.com/'\n",
-        "    }\n",
-        "    # Retrieve starting URL\n",
-        "    myPage = requests.get(startURL)\n",
+        "def collectLegoSets(url):\n",
+        "    time.sleep(12)\n",
+        "    print(url)\n",
+        "    site = requests.get(url)\n",
+        "    soup = BeautifulSoup(site.text)\n",
         "\n",
-        "    # Parse the website with Beautiful Soup\n",
-        "    parsed = BeautifulSoup(myPage.text)\n",
+        "    articles = soup.find_all('article')\n",
         "\n",
-        "    # Grab all sets from the page\n",
-        "    a = [i for i in parsed.find_all('article')]\n",
+        "    data = []\n",
         "\n",
-        "    # Create and empty data set\n",
-        "    newData = []\n",
-        "\n",
-        "    # Iterate over all sets on the page\n",
-        "    for i in a:\n",
+        "    for i in articles:\n",
         "        row = []\n",
-        "        # Add the set name to the row of data\n",
-        "        row.append(i.h1.text)\n",
+        "\n",
         "        try:\n",
-        "            # Extract price and translate to a floating point number from string, append to row IF PRICE EXISTS\n",
-        "           price_s = i.find('dt', string = 'RRP' ).find_next_sibling().text\n",
-        "           price = float(re.search(r'(\\u20AC)(\\d+[.]\\d{2})', price_s).groups()[1]) #adding the one at the end made it so that when we print out the expression it will only give us the numeric part (so the price) and not the euro symbol\n",
-        "           row.append(price) #adds the found price to the row\n",
+        "            Set = i.find('h1').text\n",
+        "            row.append(Set)\n",
+        "        except:\n",
+        "            row.append('')\n",
+        "\n",
+        "        try:\n",
+        "            price_s = i.find('dt', string='RRP').find_next_sibling().text\n",
+        "            price = float(re.search(r'(\\u20AC)(\\d+[.]\\d{2})', price_s).groups()[1])\n",
+        "            row.append(price)\n",
         "        except:\n",
         "            row.append(np.nan)\n",
-        "        try:\n",
-        "          row.append(i.find('dt',string ='Pieces').find_next_sibling().text)\n",
-        "        except:\n",
-        "          row.append(0)\n",
-        "        try:\n",
-        "          row.append(i.find('dt', 'Minifigs').find_next_sibling().text)\n",
-        "        except:\n",
-        "          row.append('')\n",
-        "        # Add the row of data to the dataset\n",
-        "        newData.append(row)\n",
-        "    newData = pd.DataFrame(newData, columns = ['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
         "\n",
-        "    # Check if there are more results on the \"next\" page\n",
+        "        try:\n",
+        "            pieces = i.find('dt', string='Pieces').find_next_sibling().text\n",
+        "            row.append(int(pieces))\n",
+        "        except:\n",
+        "            row.append(np.nan)\n",
+        "\n",
+        "        try:\n",
+        "            minifigs_text = i.find('dt', string='Minifigs').find_next_sibling().text\n",
+        "            minifigs_count = re.search(r'\\b(\\d+)\\b', minifigs_text).group(1)\n",
+        "            row.append(int(minifigs_count))\n",
+        "        except:\n",
+        "            row.append(np.nan)\n",
+        "\n",
+        "        data.append(row)\n",
+        "\n",
+        "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
+        "\n",
         "    try:\n",
-        "        nextPage = parsed.find('li', class_=\"next\").a['href']\n",
+        "      next_page = soup.find('li', class_='next').a['href']\n",
         "    except:\n",
-        "        nextPage = None\n",
+        "      next_page = None\n",
         "\n",
-        "    # If there is another page of results, grab it and combine\n",
-        "    if nextPage:\n",
-        "        # Tell our program not to load new pages too fast by \"sleeping\" for two seconds before\n",
-        "        #   going to the next page\n",
-        "        time.sleep(2)\n",
-        "        # Merge current data with next page\n",
-        "        return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n",
-        "    # Otherwise return the current data\n",
+        "    if next_page:\n",
+        "      return pd.concat([data, collectLegoSets(next_page)], axis=0)\n",
         "    else:\n",
-        "        return newData\n",
-        "    newData.to_csv('lego2019.csv', index = False)\n",
+        "      return data\n",
         "\n",
-        "data = collectLegoSets('https://brickset.com/sets/year-2019');\n",
-        "data.to_csv(\"lego2019.csv\", index = False)\n"
+        "scraped_data = collectLegoSets('https://brickset.com/sets/year-2019')\n",
+        "\n",
+        "scraped_data.to_csv(\"lego2019.csv\", index=False)\n",
+        "\n",
+        "print(scraped_data)"
       ]
     }
   ],
