--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -1521,72 +1521,79 @@
       ],
       "source": [
         "#si-exercise\n",
-        "import pandas as pd\n",
         "import requests\n",
-        "import re\n",
         "from bs4 import BeautifulSoup\n",
         "import numpy as np\n",
+        "import pandas as pd\n",
+        "import re\n",
         "import time\n",
         "\n",
+        "# A function to collect lego sets from search results on brickset.com\n",
+        "def collectLegoSets(startURL):\n",
+        "    # Add headers to imitate a real browser\n",
+        "    headers = {\n",
+        "        'User-Agent': 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/102.0.0.0 Safari/537.36',\n",
+        "        'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,*/*;q=0.8',\n",
+        "        'Referer': 'https://www.google.com/'\n",
+        "    }\n",
+        "    # Retrieve starting URL\n",
+        "    myPage = requests.get(startURL)\n",
         "\n",
-        "def collectLegoSets(url):\n",
-        "    time.sleep(12)\n",
-        "    print(url)\n",
-        "    site = requests.get(url)\n",
-        "    soup = BeautifulSoup(site.text)\n",
+        "    # Parse the website with Beautiful Soup\n",
+        "    parsed = BeautifulSoup(myPage.text)\n",
         "\n",
-        "    articles = soup.find_all('article')\n",
+        "    # Grab all sets from the page\n",
+        "    a = [i for i in parsed.find_all('article')]\n",
         "\n",
-        "    data = []\n",
+        "    # Create and empty data set\n",
+        "    newData = []\n",
         "\n",
-        "    for i in articles:\n",
+        "    # Iterate over all sets on the page\n",
+        "    for i in a:\n",
         "        row = []\n",
-        "\n",
+        "        # Add the set name to the row of data\n",
+        "        row.append(i.h1.text)\n",
         "        try:\n",
-        "            Set = i.find('h1').text\n",
-        "            row.append(Set)\n",
+        "            # Extract price and translate to a floating point number from string, append to row IF PRICE EXISTS\n",
+        "            row.append(re.search(r'\\u20AC\\s*(\\d+.\\d+)', i.find('dt', string=\"RRP\").find_next_sibling().text, re.UNICODE).groups()[0])\n",
         "        except:\n",
+        "            # Missing value for sets with no price, append to row IF NO PRICE EXISTS\n",
         "            row.append('')\n",
         "\n",
         "        try:\n",
-        "            price_s = i.find('dt', string='RRP').find_next_sibling().text\n",
-        "            price = float(re.search(r'(\\u20AC)(\\d+[.]\\d{2})', price_s).groups()[1])\n",
-        "            row.append(price)\n",
+        "            # Extract price and translate to a floating point number from string, append to row IF PRICE EXISTS\n",
+        "            row.append(i.find('dt', string=\"Pieces\").find_next_sibling('dd').find('a').text)\n",
         "        except:\n",
         "            row.append(np.nan)\n",
         "\n",
         "        try:\n",
-        "            pieces = i.find('dt', string='Pieces').find_next_sibling().text\n",
-        "            row.append(int(pieces))\n",
+        "            row.append(i.find('dt', string=\"Minifigs\").find_next_sibling('dd').find('a').text)\n",
         "        except:\n",
         "            row.append(np.nan)\n",
+        "        newData.append(row)\n",
         "\n",
-        "        try:\n",
-        "            minifigs_text = i.find('dt', string='Minifigs').find_next_sibling().text\n",
-        "            minifigs_count = re.search(r'\\b(\\d+)\\b', minifigs_text).group(1)\n",
-        "            row.append(int(minifigs_count))\n",
-        "        except:\n",
-        "            row.append(np.nan)\n",
+        "    newData = pd.DataFrame(newData, columns = ['Set', 'Price_Euro','Pieces','Minifigs'])\n",
         "\n",
-        "        data.append(row)\n",
-        "\n",
-        "    data = pd.DataFrame(data, columns=['Set', 'Price_Euro', 'Pieces', 'Minifigs'])\n",
-        "\n",
+        "    # Check if there are more results on the \"next\" page\n",
         "    try:\n",
-        "      next_page = soup.find('li', class_='next').a['href']\n",
+        "        nextPage = parsed.find('li', class_=\"next\").a['href']\n",
         "    except:\n",
-        "      next_page = None\n",
+        "        nextPage = None\n",
         "\n",
-        "    if next_page:\n",
-        "      return pd.concat([data, collectLegoSets(next_page)], axis=0)\n",
+        "    # If there is another page of results, grab it and combine\n",
+        "    if nextPage:\n",
+        "        # Tell our program not to load new pages too fast by \"sleeping\" for two seconds before\n",
+        "        #   going to the next page\n",
+        "        time.sleep(2)\n",
+        "        # Merge current data with next page\n",
+        "        return pd.concat([newData, collectLegoSets(nextPage)], axis=0)\n",
+        "    # Otherwise return the current data\n",
         "    else:\n",
-        "      return data\n",
+        "        return newData\n",
         "\n",
-        "scraped_data = collectLegoSets('https://brickset.com/sets/year-2019')\n",
-        "\n",
-        "scraped_data.to_csv(\"lego2019.csv\", index=False)\n",
-        "\n",
-        "print(scraped_data)"
+        "lego2019 = collectLegoSets(\"https://brickset.com/sets/year-2019\")\n",
+        "# Save data to CSV\n",
+        "lego2019.to_csv('lego2019.csv', index=False)"
       ]
     }
   ],
